--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
 
 <!--Navegador de Cabecera-->
- <nav class="navbar fixedTop" id="main">
-      <div class="container">
+ <nav class="fixed-nav" id="main">
+      <div class="first-div">
         <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
-        <button class="navbar-toggler" type="button" >
+        <button class="nav-menu" type="button" >
           Menu
           <i class="fa fa-bars"></i>
         </button>
@@ -33,10 +33,24 @@
         </div>
       </div>
     </nav>
+<!--Sección de Cabezera-->
+<header class="main-header">
+      <div class="first-div">
+        <figure>
+        <img class="imgAbout" src="assets/images/profile.png" alt="">
+
+          <span class="title">Start Bootstrap</span>
+          <hr class="star2">
+          <span class="theme">Web Developer - Graphic Artist - User Experience Designer</span>
+        
+      </figure>
+      </div>
+    </header>
+
 
 <!--sección portafolio-->
  <section id="portfolio">
-      <div class="container">
+      <div class="first-div">
         <h2 class="text-center">Portfolio</h2>
         <hr class="star1">
         <div class="row">
@@ -110,7 +124,7 @@
     </section>
  <!--section de descarga-->
  <section class="aboutFree" id="about">
-      <div class="container">
+      <div class="first-div">
         <h2 class="text-center">About</h2>
         <hr class="star2">
         <div class="row">
@@ -132,7 +146,7 @@
 
  <!--sección contactos-->
 <section id="contact">
-      <div class="container">
+      <div class="first-div">
         <h2 class="text-center">Contact Me</h2>
         <hr class="star-primary">
         <div class="row">
