--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <span class="title">Start Bootstrap</span>
           <hr class="star2">
           <span class="theme">Web Developer - Graphic Artist - User Experience Designer</span>
-        
+
       </figure>
       </div>
     </header>
@@ -134,7 +134,7 @@
           <div class="col4 ">
             <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
           </div>
-          <div class="col8">
+          <div class="cols">
             <a href="#" class="btn btn-lg btn-outline">
               <i class="fa fa-download"></i>
               Download Theme
@@ -145,46 +145,44 @@
     </section>
 
  <!--sección contactos-->
-<section id="contact">
+<section id="users">
       <div class="first-div">
         <h2 class="text-center">Contact Me</h2>
-        <hr class="star-primary">
+        <hr class="star1">
         <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-            <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-            <form name="sentMessage" id="contactForm" novalidate="">
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls">
+          <div class="cols">
+            <form name="usersend" id="userForm" novalidate="">
+              <div class="formall">
+                <div class="formuser elements-form controls">
                   <label>Name</label>
                   <input class="form-control" id="name" type="text" placeholder="Name" required="" data-validation-required-message="Please enter your name.">
-                  <p class="help-block text-danger"></p>
+                  <p class="text"></p>
                 </div>
               </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls">
+              <div class="formall">
+                <div class="formuser elements-form controls">
                   <label>Email Address</label>
                   <input class="form-control" id="email" type="email" placeholder="Email Address" required="" data-validation-required-message="Please enter your email address.">
-                  <p class="help-block text-danger"></p>
+                  <p class=""></p>
                 </div>
               </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls">
+              <div class="formall">
+                <div class="form-group elements-form controls">
                   <label>Phone Number</label>
                   <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="" data-validation-required-message="Please enter your phone number.">
                   <p class="help-block text-danger"></p>
                 </div>
               </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls">
+              <div class="formall">
+                <div class="form-group elements-form controls">
                   <label>Message</label>
                   <textarea class="form-control" id="message" rows="5" placeholder="Message" required="" data-validation-required-message="Please enter a message."></textarea>
                   <p class="help-block text-danger"></p>
                 </div>
               </div>
               <br>
-              <div id="success"></div>
-              <div class="form-group">
+              <div id="answer"></div>
+              <div class="formall">
                 <button type="submit" class="btn btn-success btn-lg" id="sendMessageButton">Send</button>
               </div>
             </form>
@@ -194,7 +192,7 @@
     </section>
 
  <!--div sobre la imagen circus-->
- <div class="portfolio-modal " id="portfolioModal3" tabindex="-1"  style="padding-right: 50px; display: block;">
+ <div class="portfolio" id="portfolioModal3" tabindex="-1"  style="padding-right: 50px; display: block;">
                      <h2>PROJECT TITLE</h2>
                      <img class="imgAbout" src="assets/images/portfolio/circus.png" alt="">
                   <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
